<resources>
    <string name="app_name">Creative Assistant</string>

    <string name="loading">Loading</string>

    <string name="error_empty_rooms">You do not have any rooms</string>

    <string name="error_empty_things">You do not have any things</string>

    <string name="network_problem">Connection problem</string>

    <string name="refresh">Refresh</string>

    <string name="log_in">Log in</string>

    <string name="password_label">Password</string>

    <string name="login_label">Login</string>

    <string name="login_empty_error">You must write your login here</string>

    <string name="password__empty_error">You must write your password here</string>

    <string name="url_label">Url</string>

    <string name="url_empty_error">You must write your url here</string>

    <string name="url_is_not_correct_error">Url must start with http:// or https://</string>

    <string name="default_url">https://api.ks-cube.tk/</string>

    <string name="url_key">URL_KEY</string>

    <string name="settings_activity_label">Settings</string>

    <string name="invalid_url">Invalid url. Make sure that you are writing correct url.</string>

    <string name="preferences_name">space.dotcat.assistant_preferences</string>

    <string name="rooms_activity_title">Rooms</string>

    <string name="setup_activity_label">Setup</string>

    <string name="host_label">Host</string>

    <string name="port_label">Port</string>

    <string name="complete_setup">Complete setup</string>

    <string name="secure_connection_check_box_label">Secure connection</string>

    <string name="host_empty_error">You have to write host here</string>

    <string name="port_empty_error">You have to write port here</string>

    <string name="log_out">log out</string>

    <string name="light_label">Light</string>

    <string name="light_state">State</string>

    <string name="light_brightness_label">Brightness</string>

    <string name="light_color_temperature_label">Color Temperature</string>

    <string name="pick_color_label">Pick color</string>

    <string name="color_label">Color</string>

    <string name="set_color_button_label">Set color</string>

    <string name="player_track_info">Now playing</string>

    <string name="unknown_string_text">Unknown type of thing. Contact developer if you want to add this type to the system.</string>

    <string name="unknown_string_label">Unknown thing</string>

    <string name="temperature_label">Temperature</string>

    <string name="update_event_channel_name">Update events</string>

    <string name="host_key">HOST_KEY</string>

    <string name="default_host">default_host</string>

    <string name="port_key">PORT_KEY</string>

    <string name="default_port">default_port</string>
</resources>
